--- a/textbook/GenomicPrediction.ipynb
+++ b/textbook/GenomicPrediction.ipynb
@@ -32,9 +32,9 @@
       "source": [
         "# Genomic Prediction - example -\n",
         "\n",
-        "In this notebook, we will perform Genomic Prediction analysis using simplified our own data.\n",
+        "In this notebook, we will perform Genomic Prediction analysis using sample data.\n",
         "\n",
-        "And we will conduct simulation study of application of genomic prediction model in breeding strategy\n",
+        "And we will experience the application of genomic prediction model in breeding strategy\n",
         "\n",
         "It may help you to understand ...\n",
         "\n",
@@ -52,13 +52,11 @@
         "\n",
         "* Genomic prediction model using sample dataset\n",
         "\n",
-        "  * We assume rice population.\n",
+        "  * We use rice population & grain number phenotype.\n",
         "\n",
         "* Application of genomic prediction model\n",
         "\n",
-        "  * We will predict phenotypes of F2 progeny\n",
-        "\n",
-        "  * We will consider ideal genotype for traits"
+        "  * We will consider ideal genotype for grain number"
       ],
       "metadata": {
         "id": "wZpUAKrgmHnm"
@@ -78,19 +76,21 @@
       "source": [
         "# Review of Genomic Prediction\n",
         "\n",
-        "Genomic prediction is to generate prediction model that explain phenotype by genotype.\n",
-        "\n",
-        "The process to generate genomic prediction model is ...\n",
-        "\n",
-        "1. Prepared mating population such as recombinant imbred lines (RILs), Nested association mapping (NAM) population, ...etc.\n",
-        "\n",
-        "2. Perform genotyping by NGS and phenotyping.\n",
-        "\n",
-        "3. Modeling the relationship between genotyping and phenotyping.\n",
-        "\n",
-        "4. Check performance of the generated model.\n",
+        "Genomic prediction is to generate prediction model that explain phenotype by genotype using big dataset.\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/genomic_prediction.png?raw=true\" alt=\"colab\" height=\"300px\">\n",
+        "\n",
+        "The process to generate genomic prediction model & check performance of the model is ...\n",
+        "\n",
+        "1. Separate all data to 80%(training data) & 20%(test data).\n",
+        "\n",
+        "2. Make prediction model using training data. (we use ElasticNet regression model in this notebook)\n",
+        "\n",
+        "3. Predict phenotype of test data **from genotype** by generated model\n",
+        "\n",
+        "4. Compare predicted phenotype & observed phenotype to check performance of the model\n",
+        "\n",
+        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/gpmethod.png?raw=true\" alt=\"colab\" height=\"400px\">\n",
         "\n",
         "After generating good genomic prediction model,\n",
         "\n",
@@ -146,27 +146,25 @@
         "\n",
         "Then, we perform sequencing & phenotyping for this population.\n",
         "\n",
-        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/genopheno.png?raw=true\" alt=\"colab\" height=\"300px\">"
+        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/genopheno.png?raw=true\" alt=\"colab\" height=\"300px\">\n",
+        "\n",
+        "Please run the below code to load dataset !!\n",
+        "\n",
+        "The dataset contains almost 1000 lines.\n",
+        "\n",
+        "- SNP genotype (0 = cultivar A, 2 = other cultivar)\n",
+        "- Phenotypes: Leaf width(LW_mean) & Grain number(GN_mean)"
       ],
       "metadata": {
         "id": "KF6GfH3MNxlq"
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "## Load dataset\n",
-        "\n",
-        "In this notebook, we use genotype & phenotype dataset of NAM population."
-      ],
-      "metadata": {
-        "id": "jzvltZVdLDdI"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "genotype, phenotype = load_dataset()"
+        "genotype, phenotype = load_dataset()\n",
+        "display(genotype)\n",
+        "display(phenotype)"
       ],
       "metadata": {
         "id": "jCmpDUgJLDBt"
@@ -177,66 +175,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The dataset include almost 1000 lines.\n",
+        "## 1.Separate dataset\n",
         "\n",
-        "- SNP genotype (0 = cultivar A, 2 = other cultivar)\n",
-        "- Phenotypes: Leaf width(LW_mean) & Grain number(GN_mean)"
-      ],
-      "metadata": {
-        "id": "Ze78U4-QLIGW"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# show genotype\n",
-        "display(genotype)"
-      ],
-      "metadata": {
-        "id": "tTDuuDTCLIO3"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# show phenotype\n",
-        "display(phenotype)"
-      ],
-      "metadata": {
-        "id": "DjwJD5TYHFob"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Methods\n",
+        "At first, we'll split all dataset to training data and test data.\n",
         "\n",
-        "The process to generate genomic prediction model & check performance of the model is ...\n",
+        "* Training data(80%) ... for making prediction model.\n",
         "\n",
-        "1. Separate all data to 80%(training data) & 20%(test data).\n",
+        "* Test data(20%) ... for checking performance of model\n",
         "\n",
-        "2. Make prediction model using training data. (we use ElasticNet regression model in this notebook)\n",
-        "\n",
-        "3. Predict phenotype of test data **from genotype** by generated model\n",
-        "\n",
-        "4. Compare predicted phenotype & observed phenotype to check performance of the model\n",
-        "\n",
-        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/gpmethod.png?raw=true\" alt=\"colab\" height=\"400px\">"
-      ],
-      "metadata": {
-        "id": "e2Pav8mkvHcw"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Separate dataset\n",
-        "\n",
-        "To separate dataset to training data and test data, we split dataset."
+        "Please run the below code to split datase !!"
       ],
       "metadata": {
         "id": "I3fT-bcDWsEx"
@@ -245,7 +192,9 @@
     {
       "cell_type": "code",
       "source": [
-        "test_genotype, test_phenotype, train_genotype, train_phenotype = split_dataset(genotype, phenotype, \"LW_mean\", test=0.2)"
+        "test_genotype, test_phenotype, train_genotype, train_phenotype = split_dataset(genotype, phenotype, \"GN_mean\", test=0.2)\n",
+        "print(\"test data is {} lines.\".format(test_phenotype.shape[0]))\n",
+        "print(\"training data is {} lines.\".format(train_phenotype.shape[0]))"
       ],
       "metadata": {
         "id": "4v1TBnKxBkoq"
@@ -256,34 +205,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The above code split all dataset to 20% & 80%\n",
-        "\n",
-        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation14.png?raw=true\" alt=\"colab\" height=\"200px\">\n",
-        "\n",
-        "You can check the splitted genotype & phenotype data using below code."
-      ],
-      "metadata": {
-        "id": "atBiSMHpmMFa"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# show test data\n",
-        "display(test_phenotype)\n",
-        "# show training data\n",
-        "display(train_phenotype)"
-      ],
-      "metadata": {
-        "id": "7HhOImuXmkxI"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Make prediction model\n",
+        "## 2. Make prediction model\n",
         "\n",
         "After splitting dataset,\n",
         "\n",
@@ -291,9 +213,13 @@
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation15.png?raw=true\" alt=\"colab\" height=\"200px\">\n",
         "\n",
-        "The below code generate prediction model.\n",
+        "Please run the below code to generate a prediction model.\n",
         "\n",
-        "(The model is ElasticNet model. But we skipped explanation of details of the model in this lecture because it's not statistics lecture.)"
+        "```\n",
+        "※ Memo\n",
+        "In this notebook, we used regression model (ElasticNet) to make prediction model.\n",
+        "But we skipped explanation of details of the model in this lecture because it's not statistics lecture.\n",
+        "```"
       ],
       "metadata": {
         "id": "vsj2Nq48Bkxo"
@@ -302,7 +228,8 @@
     {
       "cell_type": "code",
       "source": [
-        "LW_prediction_model = make_genomic_prediction_model(train_genotype, train_phenotype, \"LW_mean\")"
+        "GN_prediction_model = make_genomic_prediction_model(train_genotype, train_phenotype, \"GN_mean\")\n",
+        "check_equation(\"GN_mean\", GN_prediction_model)"
       ],
       "metadata": {
         "id": "14Q1rH_MBk6Z"
@@ -313,31 +240,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "※The equation is like this↓"
-      ],
-      "metadata": {
-        "id": "XwqkJpR_JOrU"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "check_equation(\"LW_mean\", LW_prediction_model)"
-      ],
-      "metadata": {
-        "id": "p98oGFVeJO1y"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Predict phenotype of test data\n",
+        "## 3. Predict phenotype of test data\n",
         "\n",
-        "After generating prediction model, we check the performance (accuracy) of the model.\n",
+        "After generating prediction model, we have to check the performance (accuracy) of the model.\n",
         "\n",
-        "To check accuracy, we used test data that is not untouched data to make model.\n",
+        "To check accuracy, we used test data that is untouched data to make model.\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation16.png?raw=true\" alt=\"colab\" height=\"200px\">\n",
         "\n",
@@ -345,7 +252,9 @@
         "\n",
         "Then, compare predicted values with observed values.\n",
         "\n",
-        "If these values showed similarity, the model has robustness."
+        "If these values are very similar, the model is robust.\n",
+        "\n",
+        "Please run the below code to predict phenotype values of test data, and compare predicted values and observed values !!"
       ],
       "metadata": {
         "id": "RuyDyg8ZBlCG"
@@ -354,56 +263,11 @@
     {
       "cell_type": "code",
       "source": [
-        "predicted_test_phenotype = predict_phenotype(test_genotype, LW_prediction_model)"
+        "predicted_test_phenotype = predict_phenotype(test_genotype, GN_prediction_model)\n",
+        "check_accuracy(predicted_test_phenotype, test_phenotype, \"GN_mean\")"
       ],
       "metadata": {
         "id": "xSCHoqKIBlKp"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "The above code predict phenotypes from genotype using the generated model.\n",
-        "\n",
-        "You can check the predicted values by below code."
-      ],
-      "metadata": {
-        "id": "2KNnNjCZvFd4"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "predicted_test_phenotype"
-      ],
-      "metadata": {
-        "id": "iwMCdz23vQEN"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Compare predicted phenotype & observed phenotype\n",
-        "\n",
-        "After predicted phenotype values of test data, we compare predicted phenotype values with observed phenotype values.\n",
-        "\n",
-        "Here, we used correlation coefficient between them to check the accuracy."
-      ],
-      "metadata": {
-        "id": "HxlE97z0BlTk"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "check_accuracy(predicted_test_phenotype, test_phenotype, \"LW_mean\")"
-      ],
-      "metadata": {
-        "id": "-3_SALNJBli7"
       },
       "execution_count": null,
       "outputs": []
@@ -422,38 +286,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## For Grain number\n",
-        "\n",
-        "try to make genomic prediction model for grain number.\n"
-      ],
-      "metadata": {
-        "id": "XeuzaMBM6ndf"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "genotype, phenotype = load_dataset()\n",
-        "test_genotype, test_phenotype, train_genotype, train_phenotype = split_dataset(genotype, phenotype, \"GN_mean\", test=0.2)\n",
-        "GN_prediction_model = make_genomic_prediction_model(train_genotype, train_phenotype, \"GN_mean\")\n",
-        "predicted_test_phenotype = predict_phenotype(test_genotype, GN_prediction_model)\n",
-        "check_accuracy(predicted_test_phenotype, test_phenotype, \"GN_mean\")\n",
-        "print(check_equation(\"GN_mean\", GN_prediction_model))"
-      ],
-      "metadata": {
-        "id": "JBo51dn66m7b"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "# Applying genomic prediction model to breeding strategy\n",
         "\n",
-        "In this section, we try to apply generated models to breeding startegy.\n",
-        "\n",
-        "We'll try to construct ideal genotype for the trait."
+        "In this section, we try to apply generated models to breeding startegy."
       ],
       "metadata": {
         "id": "WAI2X2qTBlre"
@@ -468,7 +303,7 @@
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation18.png?raw=true\" alt=\"colab\" height=\"200px\">\n",
         "\n",
-        "So, in this section, we'll try to find good genotype for grain number."
+        "So, in this section, Let's try to construct good genotype for Grain number."
       ],
       "metadata": {
         "id": "Z6yyI5M3CAQ3"
@@ -483,7 +318,7 @@
         "\n",
         "We can predict this phenotype by genomic prediction model.\n",
         "\n",
-        "like below code.\n"
+        "Please run the below code to check phenotypic changes by the genotype !!"
       ],
       "metadata": {
         "id": "efOCS7T2MG8F"
@@ -522,11 +357,20 @@
         "\n",
         "ex) \n",
         "\n",
+        "* If you wanna change genotype of chromosome 12\n",
+        "\n",
         "`predict_customized_genotype(genotype, [\"chr12\"], GN_prediction_model, \"GN_mean\")`\n",
+        "\n",
+        "* If you wanna change genotype of chromosome 1, 7, and 12\n",
         "\n",
         "`predict_customized_genotype(genotype, [\"chr01\", \"chr07\", \"chr12\"], GN_prediction_model, \"GN_mean\")`\n",
         "\n",
-        "`predict_customized_genotype(genotype, [\"chr01\", \"chr02\", \"chr03\", \"chr04\"], GN_prediction_model, \"GN_mean\")`\n"
+        "* If you wanna change genotype of chromosome 1, 2, 3, and 4\n",
+        "\n",
+        "`predict_customized_genotype(genotype, [\"chr01\", \"chr02\", \"chr03\", \"chr04\"], GN_prediction_model, \"GN_mean\")`\n",
+        "\n",
+        "\n",
+        "Please use below code and try to find best genotype for grain number !!!"
       ],
       "metadata": {
         "id": "Zp7LA-q_crpf"
